--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-FLASK_ENV=development
+FLASK_ENV=production
 EXPIRE=10
-SITE_NAME=NUAARSS
+TITLE=NUAARSS 
+ADMIN_NAME=NUAA
 PER=1
 URL=https://blogroll.a2os.club
