--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-Flask==1.0.2
 feedparser==5.2.1
 requests==2.21.0
-Werkzeug==0.14.1
 python-dotenv==0.10.1
 func_timeout==4.3.0
-gunicorn==19.9.0
+tqdm==4.43.0
