--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,7 +1,7 @@
 name: update rss
 on: 
   schedule:
-    - cron:  '*/15 * * * *'
+    - cron:  '0 */6 * * *'
   push:
     branches: 
     -  master 
